<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="ru.spb.iac.kotlin_mobile_template.activitities.authorization.data.ProfileModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000047"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:src="@mipmap/marvel_foreground"
            app:layout_constraintTop_toTopOf="parent"></ImageView>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        style="@style/RoundedTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:text="@{model.name}"
            android:layout_height="match_parent"
            android:hint="@string/profile_name"/>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/RoundedTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_login"
                android:layout_width="match_parent"
                android:text="@{model.login}"
                android:layout_height="match_parent"
                android:hint="@string/auth_login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/RoundedTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@{model.password}"
                android:hint="@string/auth_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="Сохранить"
            style="@style/RoundedButton"
            android:onClick="saveProfileData"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="Отмена"
            style="@style/RoundedButton"
            android:onClick="onBackPressed"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />
        </LinearLayout>
</layout>
